--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -21,6 +21,8 @@ jobs:
       run: python generate_index.py
 
     - name: Commit and push changes
+      env:
+        TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
