--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -22,11 +22,11 @@ jobs:
 
     - name: Commit and push changes
       env:
-        TOKEN: ${{ secrets.GH_PAT }}
+        GH_PAT: ${{ secrets.GH_PAT }}
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
+        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
         git add resources/**/index.json
         git commit -m "Auto-generate index.json" || echo "No changes to commit"
-        git push
+        git push origin HEAD:main
