--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -24,6 +24,7 @@ jobs:
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
       run: |
+        echo "Token starts with: ${GH_PAT:0:4}"
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
