--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -25,6 +25,7 @@ jobs:
         GH_PAT: ${{ secrets.GH_PAT }}
       run: |
         echo "Token starts with: ${GH_PAT:0:4}"
+        echo "Repo: ${github.repository}"
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
