--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
+        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/vitalii-vov/vitalii-vov.github.io.git
         git add resources/**/index.json
         git commit -m "Auto-generate index.json" || echo "No changes to commit"
         git push origin HEAD:main
