--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -5,28 +5,26 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  generate-index:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
 
-    - name: Generate index.json files
-      run: python generate_index.py
+      - name: Generate index.json files
+        run: python generate_index.py
 
-    - name: Commit and push changes
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/vitalii-vov/vitalii-vov.github.io.git
-        git add resources/**/index.json
-        git commit -m "Auto-generate index.json" || echo "No changes to commit"
-        git push origin HEAD:main
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add resources/**/index.json
+          git commit -m "Auto-generate index.json" || echo "No changes to commit"
+          git push
+
