--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add resources/**/index.json
+          git add $(find resources -name index.json)
           git commit -m "Auto-generate index.json" || echo "No changes to commit"
           git push
 
